--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "nanoid": "^5.0.5",
     "nuxt": "^3.10.1",
+    "primeicons": "^6.0.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
@@ -19,6 +21,7 @@
     "@vueuse/nuxt": "^10.7.2",
     "autoprefixer": "^10.4.17",
     "nuxt-icon": "^0.6.8",
+    "nuxt-primevue": "^0.3.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1"
   }
